# Proyecto_IPD438

./: BUG_MEMORIA_FIJA.md  CHANGELOG_FATTREE_ECN_WAVESKETCH.md  CMakeLists.txt  COMO_PROSEGUIR.md  COMPARISON_OFFLINE_VS_NS3.md  DEBUG_MEMORY_IMMUNITY.md  DOCUMENTACION_UNIFICADA.md  EXPERIMENTAL_RESULTS_2025-10-05.md  GUIA_REPLICACION.md  IMPLEMENTATION_SUMMARY_NS3.md  KNOWLEDGE_BASE_ECN.md  PROBLEMA_CMAKE_DEPS.md  README_ECN.md  README_NS3_SKETCHES.md  README_OFFLINE.md  RESUMEN_EJECUTIVO.md  RESUMEN_FINAL.md  SOLUCION_FINAL_MEMORIA.md  TECHNICAL_REFERENCE_ECN.md  benchmark_results_offline_full.csv  benchmark_results_offline_sample.csv  benchmark_results_offline_sample_pp.csv  benchmark_results_offline_sample_sweep.csv  benchmark_results_offline_test.csv  compute_sampling_metrics.py  data_sample.csv  data_sample_5k.csv  fattree.cc  fattree_benchmark.cc  fattree_ecn_clean.cc  fattree_k4_replay.cc  fattree_with_sketches.cc  flow_rate.csv  flow_rate_sr1.csv  flow_rate_sr1_256.csv  flow_rate_sr1_64.csv  flow_rate_sr1_8.csv  inspect_flows.txt  más detalle, ademas de un paso a apso respecto al....md  offline_evaluator  (+23 more)
Utility/: debug.h  murmurhash3.h  parameter.h  pffft.h
Wavelet/: counter.h  wavelet.h
analysis_ns3/: summary_statistics.csv
informe/: conference_101719.aux  conference_101719.fdb_latexmk  conference_101719.fls  conference_101719.out  conference_101719.tex
out_compare_sample/: merged_summary.csv  summary_ours.csv  top_discrepancies.csv
out_compare_sample_pp/: merged_summary.csv  summary_authors.csv  summary_ours.csv  top_discrepancies.csv
out_compare_sample_sweep/: merged_summary.csv  summary_ours.csv  top_discrepancies.csv
out_detailed_analysis/: analysis_summary.txt  index.html
results_ns3_sweep/: all_results.csv  fourier_128kb.csv  fourier_192kb.csv  fourier_256kb.csv  fourier_96kb.csv  omniwindow_128kb.csv  omniwindow_192kb.csv  omniwindow_256kb.csv  omniwindow_96kb.csv  persistcms_128kb.csv  persistcms_192kb.csv  persistcms_256kb.csv  persistcms_96kb.csv  wavesketch_128kb.csv  wavesketch_192kb.csv  wavesketch_256kb.csv  wavesketch_96kb.csv
scripts/: analyze_ns3_results.py  analyze_ns3_results_recompiled.py  clean_generated.sh  compare_reports.py  generate_detailed_plots.py  run_chunked_evaluation.sh  run_full_sweep.sh  run_ns3_sweep.sh  run_ns3_sweep_recompiled.sh  run_offline_sample.sh  run_offline_sweep_sample.sh  run_sweep_isolated.sh  visualize_results.py
wavesketch/: README.md  analyze_reports.py
wavesketch/Utility/: debug.h  parameter.h
wavesketch/Wavelet/: .heavy.h.swp  wavelet.h
